<resources>
    <string name="app_name">AppFitsPhere</string>
    <string name="app_logo">app_logo</string>
    <string name="empower_your_fitness_evolution">Empower your fitness evolution.</string>
    <string name="home_bottom">Home</string>
    <string name="schedule_bottom">Schedule</string>
    <string name="profile_bottom">Profile</string>
    <string name="search_bottom">Search</string>
    <string name="home_item">Home</string>
    <string name="hey">Hey,</string>
    <string name="profile_name">Prathikesh</string>
    <string name="motivation_qoute">\"Every rep, every set, brings you closer to your best self.\n Keep pushing, keep believing.\"</string>
    <string name="date"><![CDATA[< Today Feb, 21 >]]></string>
    <string name="workout_plan">Workout \nPlan</string>
    <string name="meal_plan">Meal \nPlan</string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="activity_log">Activity Log</string>
    <string name="your_monthly_progress">Your monthly progress</string>
    <string name="lost_weight">You lost 2kg yesterday, Keep it up!</string>
    <string name="progress_bar">progress_bar</string>
    <string name="burned">Burned</string>
    <string name="_870">870</string>
    <string name="kcal">kcal</string>
    <string name="flame">flame</string>
    <string name="intake">Intake</string>
    <string name="_1520">1520</string>
    <string name="_65kg">65kg</string>
    <string name="goal_55kg">Goal 60kg</string>
    <string name="food">food</string>
    <string name="weight">Weight</string>
    <string name="mini_progress">mini_progress</string>
    <string name="back_arrow">back_arrow</string>
    <string name="meal">Meal Plan</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="b_item1">Protein Shake with Strawberry and Milk 100kcals</string>
    <string name="b_item2">Chicken Sandwich 200kcals</string>
    <string name="b_item3">Veggie Omelette 150kcals</string>
    <string name="dinner">DINNER</string>
    <string name="add_icon">add_icon</string>
    <string name="lunch">LUNCH</string>
    <string name="schedule">Schedule</string>
    <string name="calendar">calendar</string>
    <string name="schedule_topic">Weekly Progress</string>
    <string name="current_week">Current Week</string>
    <string name="date2">Aug 10 - 24, 2024</string>
    <string name="hr_progress_bar">hr_progress_bar</string>
    <string name="_40">40%</string>
    <string name="_19">10</string>
    <string name="mon_schedule">Arms and Shoulders</string>
    <string name="_20">11</string>
    <string name="tue_schedule">Rest Day</string>
    <string name="_21">12</string>
    <string name="wed_sch">Chest and Abs</string>
    <string name="_22">13</string>
    <string name="thu_sch">Cardio and Legs</string>
    <string name="_23">14</string>
    <string name="fri_sch">Chest and Abs</string>
    <string name="_24">15</string>
    <string name="sat_sch">Back and Biceps</string>
    <string name="_25">16</string>
    <string name="sun_sch">Rest Day</string>
    <string name="_26">17</string>
    <string name="mon_sch">Upper Body</string>
    <string name="profile">User Profile</string>
    <string name="profile_pic">profile_pic</string>
    <string name="age">Age :</string>
    <string name="profile_weight">Weight :</string>
    <string name="height">Height :</string>
    <string name="_25_years">22 years</string>
    <string name="_65_65kg">63.5kg</string>
    <string name="_170cm">178cm</string>
    <string name="camera">camera</string>
    <string name="profile_topic1">Set your fitness goal :</string>
    <string name="topic_icon">topic_icon</string>
    <string name="item1">Weight loss</string>
    <string name="item2">Maintain weight</string>
    <string name="item3">Muscle gain</string>
    <string name="profile_topic2">Set your motivational quote :</string>
    <string name="profile_topic3">Recommended Categories</string>
    <string name="category1"><![CDATA[CardioTraining >]]></string>
    <string name="category2"><![CDATA[Strength Training >]]></string>
    <string name="category3"><![CDATA[Medidation & Yoga>]]></string>
    <string name="meal_nav">Meal</string>
</resources>