<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="177dp"

        android:layout_alignEnd="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="-21dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="92dp"
        android:foregroundGravity="center_horizontal"
        app:cardBackgroundColor="@color/light_grey"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="121dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/small_cards_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/workout_plan"
                app:srcCompat="@drawable/gym" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/roboto_medium"
                android:lineSpacingExtra="6sp"
                android:text="@string/workout_plan"
                android:textAlignment="center"
                android:textColor="@color/custom_color_text_primary"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="64dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/right_arrow"
                android:textColor="@color/custom_color_text_primary"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="121dp"
            android:layout_marginStart="208dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="0dp"
            app:cardBackgroundColor="@color/small_cards_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="64dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/right_arrow"
                android:textColor="@color/custom_color_text_primary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="51dp"
                android:layout_height="48dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/meal_plan"
                app:srcCompat="@drawable/meal" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/roboto_medium"
                android:lineSpacingExtra="6sp"
                android:text="@string/meal_plan"
                android:textColor="@color/custom_color_text_primary"
                android:textSize="14sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/activity_log"
            android:textColor="@color/custom_color_primary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:itemTextColor="@drawable/text_color_selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_menu" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="356dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/hey"
        android:textColor="@color/custom_color_text_primary"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="242dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/profile_name"
        android:textColor="@color/custom_color_primary"
        android:textSize="24sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="-196dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/motivation_qoute"
        android:textSize="12sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="350dp"
        android:layout_height="139dp"

        android:layout_alignEnd="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="-21dp"
        android:layout_marginRight="29dp"
        app:cardBackgroundColor="@color/custom_color_secondary"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto"
            android:text="@string/your_monthly_progress"
            android:textColor="@color/custom_color_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="192dp"
            android:layout_marginTop="42dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/lost_weight"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="44dp"
            android:contentDescription="@string/progress_bar"
            app:srcCompat="@drawable/progress_bar" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="131dp"

        android:layout_alignParentTop="true"
        android:layout_marginTop="306dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="83dp"
            android:layout_height="119dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="@color/small_cards_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/burned"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="40dp"
                android:foregroundGravity="center_horizontal"
                android:text="@string/_870"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/roboto"
                android:text="@string/kcal" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/flame"
                app:srcCompat="@drawable/flame" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="83dp"
            android:layout_height="119dp"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="@color/small_cards_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/intake"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="40dp"
                android:text="@string/_1520"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/roboto"
                android:text="@string/kcal" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/food"
                app:srcCompat="@drawable/food" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="83dp"
            android:layout_height="119dp"
            app:cardBackgroundColor="@color/small_cards_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/weight"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/mini_progress"
                app:srcCompat="@drawable/mini_progress" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="80dp"
                android:text="@string/_65kg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/roboto"
                android:text="@string/goal_55kg"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cardView"
        android:layout_alignEnd="@+id/cardView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="118dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="122dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:gravity="center_horizontal"
        android:text="@string/date" />

</RelativeLayout>