<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id ="@+id/bottomNavigationView"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:elevation="2dp"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemTextColor="@drawable/text_color_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="labeled"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/meal"
            android:textColor="@color/custom_color_text_primary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/dates"
            android:layout_width="360dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <Button
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/custom_color_secondary"
                android:paddingStart="8dp"
                android:text="@string/mon"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,SmallSp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/custom_color_secondary"
                android:paddingStart="8dp"
                android:text="@string/tue"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,SmallSp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/custom_color_text_secondary"
                android:paddingStart="8dp"
                android:text="@string/wed"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,SmallSp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/custom_color_secondary"
                android:paddingStart="8dp"
                android:text="@string/thu"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,SmallSp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/custom_color_secondary"
                android:paddingStart="8dp"
                android:text="@string/fri"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,SmallSp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/custom_color_secondary"
                android:paddingStart="8dp"
                android:text="@string/sat"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,SmallSp" />


            <Button
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/custom_color_secondary"
                android:paddingStart="8dp"
                android:text="@string/sun"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="452dp"
            android:layout_marginTop="16dp"
            android:foregroundGravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dates">

            <androidx.cardview.widget.CardView
                android:layout_width="331dp"
                android:layout_height="138dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:foregroundGravity="center_horizontal"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="10dp" >

                <TextView
                    android:id="@+id/textView65"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:text="@string/breakfast"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView66"
                    android:layout_width="331dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/b_item1"
                    android:textColor="@color/custom_color_text_primary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView67"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/b_item2"
                    android:textColor="@color/custom_color_text_primary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView68"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="80dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/b_item3"
                    android:textColor="@color/custom_color_text_primary"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="290dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/add_icon"
                    app:srcCompat="@drawable/baseline_add_circle_24" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="331dp"
                android:layout_height="138dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:foregroundGravity="center_horizontal"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="10dp" >
                <TextView
                    android:id="@+id/textView69"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:text="@string/lunch"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/imageViewadd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_icon"
                    android:layout_marginStart="290dp"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/baseline_add_circle_24" />
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="331dp"
                android:layout_height="138dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:foregroundGravity="center_horizontal"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="10dp" >

                <TextView
                    android:id="@+id/textView70"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:text="@string/dinner"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_icon"
                    android:layout_marginStart="290dp"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/baseline_add_circle_24" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>